--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-spring": "^9.4.2",
     "swiper": "^7.4.1"
   },
   "devDependencies": {
